Fix picker scroll, closes #919 (#938)
* Update picker scrollbar

* Increment version

--- a/src/app/components/picker/picker.component.scss
+++ b/src/app/components/picker/picker.component.scss
@@ -16,9 +16,21 @@
     padding-left: 1px;
   }
 
-  .p-tabview-nav-content {
+  .p-tabview-nav {
     overflow-x: auto;
     overflow-y: hidden;
     scrollbar-width: thin;
+
+    // Rough equivalent to Firefox `scrollbar-width: thin` for webkit
+    &::-webkit-scrollbar {
+      height: 8px;
+    }
+    &::-webkit-scrollbar-track {
+      background: transparent;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: rgba(155, 155, 155, 0.5);
+      border: transparent;
+    }
   }
 }
